# Django-QuizSite

./: db.sqlite3  pyproject.toml
base/: settings.py  urls.py
quiz/: admin.py  forms.py  models.py  urls.py
quiz/migrations/: 0001_initial.py  0002_auto_20210408_0447.py  0003_alter_category_content.py  0004_question_title.py  0005_auto_20210427_1045.py  0006_detailresult.py  0007_auto_20210505_0958.py  0008_auto_20210506_0948.py
quiz/templates/: base_generic.html  staff_index.html  user_index.html
quiz/templates/account/: history.html
quiz/templates/category/: category_confirm_delete.html  category_create_form.html  category_detail.html  category_list.html  category_update_form.html
quiz/templates/contest/: contest_category_list.html  contest_detail_result.html  contest_quiz_confirm.html  contest_quiz_detail.html  contest_quiz_list.html  contest_results.html
quiz/templates/quiz/: quiz_form.html
quiz/templates/statistic/: category-bar-chart.html  statistic.html
quiz/views/: category.py  contest.py  index.py  statistic.py  user.py
static/css/: styles.css
static/js/: countdown.js  do-quiz-chart.js
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
