[tool.poetry]
name = "test_website"
version = "0.1.0"
description = ""
authors = ["dien2khust <diennv@icts.vn>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
Django = "^3.2"
djangorestframework = "^3.12.4"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
